[package]
name = "bevy_addendum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bevy_addendum"
crate-type = ["lib"]

[dependencies]
bevy = "0.13.2"
leafwing-input-manager = "0.13.0"
serde = "1.0"
strum = "0.25.0"
strum_macros = "0.25.3"
