[package]
name = "bevy_addendum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bevy_addendum"
crate-type = ["lib"]

[dependencies]
bevy = "0.14.0"
leafwing-input-manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager", rev = "7cc1a52" }
serde = "1.0"
strum = "0.26.3"
strum_macros = "0.26.4"
